<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/EditPcFragment"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPcFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <!-- Nombre del PC -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pc_name"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_max_name"
            app:startIconDrawable="@drawable/ic_pc"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Marca del PC -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pc_brand"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:startIconDrawable="@drawable/ic_brand"
            style="">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Modelo del PC -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pc_model"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:startIconDrawable="@drawable/ic_model"
            style="">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Description del PC -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pc_description"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:startIconDrawable="@drawable/ic_desc"
            style="">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Serial Number del PC -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiSerialNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serial_number"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:startIconDrawable="@drawable/ic_serial_number"
            style="">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSerialNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Processor del PC -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiProcessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/processor"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:startIconDrawable="@drawable/ic_processor"
            style="">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProcessor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- RAM del PC -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiRAM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RAM"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:counterEnabled="false"
            app:counterMaxLength="50"
            app:startIconDrawable="@drawable/ic_brand"
            style="">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRAM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Storage del PC -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiStorage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/storage"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_required"
            app:counterEnabled="false"
            app:counterMaxLength="50"
            app:startIconDrawable="@drawable/ic_storage"
            style="">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_name" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>